docs: updated profile.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
   <h1>Josef Meyer</h1>
+  <h3>Profile</h3>
+  <ul>
+    <li><b>Started:</b> 2023-08-19</li>
+    <li><b>Role:</b> Software Developer</li>
+    <li><b>Hobbies:</b> Reading, Programming (Programming Language Implementation, Timing Software)</li>
+  </ul>
 </body>
 </html>
